--- a/tzbb-mc-workbench/.npmrc
+++ b/tzbb-mc-workbench/.npmrc
@@ -3,7 +3,7 @@ init.author.name = dreamsleep
 init.author.email = lele4900@126.com
 init.author.url = http://192.168.1.17:8089/repository/npmhosted/
 # an email is required to publish npm packages
-email=lele4900@126.com
+email=ele4900@126.com
 always-auth=true
 _auth=ZHJlYW1zbGVlcDpkcmVhbXNsZWVw
 
